--- a/_posts/2019-07-02-the-us-narrative-today.html
+++ b/_posts/2019-07-02-the-us-narrative-today.html
@@ -2575,107 +2575,107 @@ stories:
   domain: http://www.mooreamerican.com/
   link: https://www.mooreamerican.com/oklahoma/news/warrant-issued-for-stillwater-man-after-using-cellphone-as-weapon/article_a4501025-30b2-5a16-a502-5a5d1c265d72.html
 images:
-- name: fast-lights-freeway-redes-fast-flux-623x425-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-light-dali.jpg
-- name: gypsy-wagon-gypsywagon-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-gan-vogh.jpg
-- name: gypsy-wagon-gypsywagon-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-smoking-cigarette.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-marcel-duchamp.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-marcel-duchamp.png
-- name: scream-IMG_8486.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-IMG_8486.jpg
-- name: border-crossing-bordercrossing-monet-one.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-monet-one.png
-- name: legal-statue-legalstatue-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-aqua.jpg
-- name: old-cabin-oldcabin-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-yellow-paper.jpg
-- name: blossombar-crafty-painting-file-00-00-50-42.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-crafty-painting-file-00-00-50-42.jpg
-- name: razorcliff-razorcliff-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-atari-asteroids.jpg
-- name: walled-garden-walled-garden-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-blue-circuit.jpg
-- name: crow-crow-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-clean-view.jpg
-- name: hollywood-building-hollywood-building-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-dark-soul.jpg
-- name: old-door-lock-old-door-lock-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-emily-carr.jpg
-- name: school-clouds-church-clouds-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-monet-one.jpg
-- name: birdhouse-birdhouse-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-purple-pond.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-umberto-bocc.jpg
-- name: old-gas-pumps-oldgaspumps-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-yellow-collage.jpg
-- name: statue-face-open-mouth-statue-face-open-mouth-alien-goggles.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-face-open-mouth-statue-face-open-mouth-alien-goggles.png
-- name: stories-amusement-park-2-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-amusement-park-2-light-dali.jpg
-- name: server-cloud-server-racks-door-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-nazi-poster.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-free-woman.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-free-woman.jpg
-- name: castle-wall-DSC-0067-crafty-painting.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-crafty-painting.JPG
-- name: diamondcreek-diamondcreek-still.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/diamondcreek-diamondcreek-still.jpg
-- name: statue-of-liberty-front-view-statueofliberty-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-post-modern.jpg
-- name: oldcabin-store-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-space-pizza.jpg
-- name: mosaic-face-mosaic-face-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-plentiful.jpg
-- name: gears-4882162452-fa3126b38d-b-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-atari-asteroids.jpg
-- name: border-fence-border-fence-on-hill-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-far-away.jpg
-- name: white-house-lawn-white-house-window-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-purple-pond.jpg
-- name: castle-wall-DSC-0067-graham-sutherland.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-graham-sutherland.JPG
-- name: old-school-house-old-schoolhouse-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-blue-granite.jpg
-- name: trucksilo-trucksilo-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-plentiful.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-blue-brush.jpg
-- name: old-barn-old-barn-1500-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-constitution.jpg
-- name: castle-wall-DSC-0067-blue-circuit.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-blue-circuit.JPG
-- name: old-gas-pumps-oldgaspumps-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-creativity.jpg
-- name: berlinwall-DSC-0084-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-ww2-dresden.jpg
-- name: razorcliff-razorcliff-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-clean-view.jpg
-- name: oldhotel-oldhotel-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-creativity.jpg
-- name: gears-4882162452-fa3126b38d-b-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-purple-pond.jpg
-- name: oldsmallboat-oldsmallboat-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-space-pizza.jpg
-- name: rain-princess-IMG_6436.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-IMG_6436.jpg
-- name: oldhouse-oldhouse-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-atari-asteroids.jpg
-- name: window-window-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-colored-circuits.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-neo-instinct.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-neo-instinct.png
-- name: white-house-whitehouse-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-gred-mash.jpg
-- name: bordercrossing-bordercrossing-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-dark-dali.jpg
-- name: old-cabin-oldcabin-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-internet-numbers.jpg
-- name: amusement-park-amusement-park-2-copper-circuit-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-copper-circuit-2.jpg
-- name: amusement-park-amusement-park-2-china-prop.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-china-prop.jpg
+- name: razorwire-DSC-0080-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-internet-numbers.jpg
+- name: oldcabin-oldcabin-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-dark-dali.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-mucha-mult.jpg
+- name: walled-garden-walled-garden-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-atari-missle.jpg
+- name: downtown-los-angeles-downtown-la-hot-spicy.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-hot-spicy.JPG
+- name: dragon-desert-desert-dragon-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-dali-two.jpg
+- name: border-crossing-bordercrossing-green-zuma.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-green-zuma.png
+- name: hollywood-building-hollywood-building-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-graham-sutherland.jpg
+- name: old-school-house-old-schoolhouse-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-atari-asteroids.jpg
+- name: copper-circuit-DSC_0088.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-DSC_0088.jpg
+- name: abandonedbuildings_sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_sunday.jpg
+- name: wave-P9180036.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wave-P9180036.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-matrix.jpg
+- name: old-door-lock-old-door-lock-2-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-colorful-blocks.jpg
+- name: oldbarn-oldbarn-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-mucha-mult.jpg
+- name: carry-load-carryload-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-mucha-mult.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-colorful-blocks.jpg
+- name: oldtrain-oldtrain-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-space-pizza.jpg
+- name: white-house-lawn-white-house-lawn-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-gan-vogh.jpg
+- name: downtown-trucksilo-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-crunch-paper.jpg
+- name: old-barn-old-barn-1500-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-spagetti-accident.jpg
+- name: liberty-back-statue-liberty-back-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-dark-soul.jpg
+- name: crow-crow-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-colorful-blocks.jpg
+- name: oldcabin-store-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-mucha-mult.jpg
+- name: capital-battle-capitolbattle-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-purple-pond.jpg
+- name: aws-s3-stories-cityscape-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-cityscape-dali-three.jpg
+- name: old-granary-field-oldhouse-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-purple-pond.jpg
+- name: liberty-back-statue-liberty-back-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-nazi-poster.jpg
+- name: death-valley-death-valley-national-park-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-dali-three.jpg
+- name: docks-docks-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-yellow-collage.jpg
+- name: adam-smith-adam-smith-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-dali-three.jpg
+- name: status-berlin-status-berlin-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-nazi-poster.jpg
+- name: statue-of-liberty-front-view-statueofliberty-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-sunday.jpg
+- name: oldbarn-oldbarn-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-blue-brush.jpg
+- name: oldhousecars-house-old-cars-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-mucha-mult.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-matrix.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-matrix.JPG
+- name: oldroad-old-road-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-oily-mcoilface.jpg
+- name: oldhouse-oldhouse-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-crunch-paper.jpg
+- name: bordercrossing-bordercrossing-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-pablo-blue.jpg
+- name: oldsmallboat-oldsmallboat-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-atari-missle.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-gan-vogh.jpg
+- name: window-window-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-crunch-paper.jpg
+- name: white-house-lawn-white-house-lawn-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-plentiful.jpg
+- name: yosemite-yosemite-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-gan-vogh.jpg
+- name: birdhouse-birdhouse-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-mucha-mult.jpg
+- name: aws-s3-stories-fence-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-fence-dark-dali.jpg
+- name: aws-s3-stories-dark-clouds-la-buildings.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-dark-clouds-la-buildings.jpg
+- name: old-gas-pumps-oldgaspumps-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-atari-asteroids.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-pablo-blue.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-pablo-blue.JPG
+- name: berlinwall2-berlinwall-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-sand-paper.jpg
+- name: berlinwall-DSC-0084-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-deep-connections.jpg
 ---
 Tad Webb Named New Baseball Coach.&nbsp;Silverthorne To Celebrate Independence Day With Live Music, Art Festival.&nbsp;Karlie Kloss Feels 'stronger' After Converting To Judaism.&nbsp;Man Charged In Murder Attempt.&nbsp;State Police Release More Details Into Alleged Cambria County Inmate's Murder Confession.&nbsp;Alert Level Increased At World's Largest Volcano In Hawaii.&nbsp;House Committee Sues IRS, Treasury For Trump Tax Returns.&nbsp;Vehicle Crash Reported On Watkins Road.&nbsp;
